deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-back-agendamiento
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  
host: api.agendamiento.lumonidy.studio
  http:
    paths:
backend:
      service:
        name: back-agendamiento
        port:
          number: 80
    pathType: Prefix
    path: /
tls:
hosts:
  - api.agendamiento.lumonidy.studio
secretName: agendamiento-tls
